--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                              and explore his creative side. As if that's not scary enough, Halloween's just around the 
                              cor
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                             of Fire series!One will have the power of wings of fire . . . Sunny has always taken the
                              Dragonet
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         <div class="book-series">Series: The Famous Five</div>
                         <div class="book-summary">Nothing could be more exciting than a daring night flight on Bill's plane! But Philip, Dinah, Lucy-Ann, Jack and Kiki the parrot soon find themselves flying straight into a truly amazing adventure. Who are the two strange pilots, and what is the secret
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                         <div class="book-series">Series: Harry Potter</div>
                         <div class="book-summary">Harry Potter has never been the star of a Quidditch team, scoring points while riding a broom far above the ground. He knows no spells, has never helped to hatch a dragon, and has never worn a cloak of invisibility.All he knows is a miserable life.
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <div class="book-series">Percy Jackson & The Olympians</div>
                         <div class="book-summary">All year the half-bloods have been preparing for battle against the Titans, knowing the odds of victory are grim. Kronos's army is stronger than ever, and with every god and half-blood he recruits, the evil Titan's power only grows. 
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <div class="book-series">Series: Witch World</div>
                         <div class="book-summary">Jessie never suspected that witches are real, or that she is one, in the start of this paranormal suspense saga from #1 New York Times bestselling author Christopher Pike. Heading off for a weekend in Las Vegas with her friends, Jessie Ralle has only one worry.
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                         <div class="book-series">Series: The Heroes of Olympus</div>
                         <div class="book-summary">What he did to end up here, Jason has no idea--except that everything seems very wrong. Piper has a secret. Her father has been missing for three days, and her vivid nightmares reveal that he's in terrible danger.
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                         <div class="book-series"></div>
                         <div class="book-summary">Rich Dad Poor Dad, the #1 Personal Finance book of all time, tells the story of Robert Kiyosaki and his two dads--his real father and the father of his best friend, his rich dad--and the ways in which both men shaped his thoughts about money and investing. The book explodes the myth that you need to earn a high income
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                         <div class="book-series">Series: Oxford Bookworms</div>
                         <div class="book-summary">A Tale of Two Cities (1859) is a novel by Charles Dickens, set in London and Paris before and during the French Revolution. The novel depicts the plight of the French peasantry demoralized by the French aristocracy in the years leading up to the revolution.
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                         <div class="book-series"></div>
                         <div class="book-summary">Nominated as one of America's best-loved novels by PBS's The Great American Read Edith Grossman's definitive English translation of the Spanish masterpiece, in an expanded P.S. edition Widely regarded as one of the funniest and most tragic books ever written, Don Quixote chronicles the adventures of the self-created knight-errant.
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                         <div class="book-series"></div>
                         <div class="book-summary">Agatha Christie's most famous and acclaimed novel! Ten strangers are brought together on an isolated island where, one by one, they die in a murderous countdown...
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                         <div class="book-series">Series: Tolkien Illustrated</div>
                         <div class="book-summary">The stirring adventure that begins The Lord of the Rings, the greatest fantasy epic of all time When Thorin Oakenshield and his band of dwarves embark upon a dangerous quest to reclaim the hoard of gold stolen from them by the evil dragon Smaug.
                         </div>
-                        <button type="button" id="fav-btn">Add to favourite</button>
+                        <button type="button" id="fav-btn">Read More</button>
 
                     </div>
                 </div>
