--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                        velit fugit esse quia quasi temporibus odit possimus sit itaque ab nobis et adipisci dolore!
                        Veniam, beatae!
                     </p>
-                    <button type="button" id="btn1">Explore</button>
+                    <a href="search.html"><button type="button" id="btn1">Explore</button></a>
                 </div>
 
 
@@ -74,7 +74,7 @@
                 <div class="card">
                     <img src="images/Arrival/book1.jpeg" class="card-img" alt="">
                     <div class="card-body">
-                        <div class="book-title">The Meltdown</div>
+                        <div class="book-title">Double Down</div>
                         <div class="book-author">By Jeff Kinney</div>
                         <div class="book-series">Series: Diary of a Wimpy Kid</div>
                         <div class="book-summary">The pressure's really piling up on Greg Heffley. His mom thinks 
@@ -82,7 +82,16 @@
                              and explore his creative side. As if that's not scary enough, Halloween's just around the 
                              cor
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Diary of a Wimpy Kid: Double Down illustrated by American
+                            author and cartoonist Jeff Kinney. The series has been ongoing since the first book was published in 2007, with
+                            new books still being published today. Like many of Kinney's books, Double Down sold extremely
+                            well, becoming one of the top sellers of 2016—the year it was originally published. Several
+                            Diary of a Wimpy Kid books have been adapted for film, but Double Down is not yet one of
+                            them. Double Down features the same characters as previous Wimpy Kid books. It is written in the
+                            form of a middle-school boy's diary. There are highly stylized illustrations throughout the
+                            text to accompany the story.
+                        </div>
+                        <button id="summary-btn1" onclick="toggleSummary('summary-btn1')">Read More</button>
 
                     </div>
                 </div>
@@ -98,7 +107,16 @@
                             of Fire series!One will have the power of wings of fire . . . Sunny has always taken the
                              Dragonet
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">The dragonets struggle to fulfill the prophecy and somehow end
+                            the war in this thrilling new installment of the New York Times bestselling Wings of Fire
+                            series!One will have the power of wings of fire. Sunny has always taken the Dragonet Prophecy very
+                            seriously. If Pyrrhia's dragons need her, Clay, Tsunami, Glory, and Starflight to end the war, she's
+                            ready to try.She even has some good ideas how to do it, if anyone would listen to her.But shattering news
+                            from Morrowseer has shaken Sunny's faith in their destiny. Is it possible for anyone to end this terrible
+                            war and choose a new SandWing queen? What if everything they've been through was for nothing? 
+
+                        </div>
+                        <button id="summary-btn2" onclick="toggleSummary('summary-btn2')">Read More</button>
 
                     </div>
                 </div>
@@ -111,7 +129,8 @@
                         <div class="book-series">Series: The Famous Five</div>
                         <div class="book-summary">Nothing could be more exciting than a daring night flight on Bill's plane! But Philip, Dinah, Lucy-Ann, Jack and Kiki the parrot soon find themselves flying straight into a truly amazing adventure. Who are the two strange pilots, and what is the secret
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Ulian, Dick, Anne, George and Timmy the dog find excitement and adventure wherever they go in Enid Blyton's most popular series. After the Five see a boy being kidnapped at the beach, they set out to find him. But where have the kidnappers hidden the boy? Will Timmy lead them to the answer? In addition to the Famous Five novels, Enid Blyton wrote a clutch of short stories based on the characters. These were published in magazines and collected in the Famous Five Short Story Collection (Hodder). For the first time, the complete and original text of Good Old Timmy (1956) appears in an individual volume, illustrated with brand new colour art by Jamie Littler.</div>
+                        <button id="summary-btn3" onclick="toggleSummary('summary-btn3')">Read More</button>
 
                     </div>
                 </div>
@@ -124,7 +143,8 @@
                         <div class="book-series">Series: Harry Potter</div>
                         <div class="book-summary">Harry Potter has never been the star of a Quidditch team, scoring points while riding a broom far above the ground. He knows no spells, has never helped to hatch a dragon, and has never worn a cloak of invisibility.All he knows is a miserable life.
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Harry Potter has never been the star of a Quidditch team, scoring points while riding a broom far above the ground. He knows no spells, has never helped to hatch a dragon, and has never worn a cloak of invisibility.All he knows is a miserable life with the Dursleys, his horrible aunt and uncle, and their abominable son, Dudley - a great big swollen spoiled bully. Harry's room is a tiny closet at the foot of the stairs, and he hasn't had a birthday party in eleven years.But all that is about to change when a mysterious letter arrives by owl messenger: a letter with an invitation to an incredible place that Harry - and anyone who reads about him - will find unforgettable.</div>
+                        <button id="summary-btn4" onclick="toggleSummary('summary-btn4')">Read More</button>
 
                     </div>
                 </div>
@@ -137,7 +157,8 @@
                         <div class="book-series">Percy Jackson & The Olympians</div>
                         <div class="book-summary">All year the half-bloods have been preparing for battle against the Titans, knowing the odds of victory are grim. Kronos's army is stronger than ever, and with every god and half-blood he recruits, the evil Titan's power only grows. 
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">From New York Times best-selling author, Rick Riordan, comes the momentous final book in the blockbuster Percy Jackson and the Olympians series. All year the half-bloods have been preparing for battle against the Titans, knowing the odds of victory are grim. Kronos's army is stronger than ever, and with every god and half-blood he recruits, the evil Titan's power only grows. While the Olympians struggle to contain the rampaging monster Typhon, Kronos begins his advance on New York City, where Mount Olympus stands virtually unguarded. Now it's up to Percy Jackson and an army of young demigods to stop the Lord of Time.</div>
+                        <button id="summary-btn5" onclick="toggleSummary('summary-btn5')">Read More</button>
 
                     </div>
                 </div>
@@ -150,7 +171,8 @@
                         <div class="book-series">Series: Witch World</div>
                         <div class="book-summary">Jessie never suspected that witches are real, or that she is one, in the start of this paranormal suspense saga from #1 New York Times bestselling author Christopher Pike. Heading off for a weekend in Las Vegas with her friends, Jessie Ralle has only one worry.
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Start at the beginning with RED QUEEN, the first book in the thrilling #1 New York Times bestselling series! Red Queen, by #1 New York Times bestselling author Victoria Aveyard, is a sweeping tale of power, intrigue, and betrayal, perfect for fans of George R.R. Martin's Game of Thrones series. Mare Barrow's world is divided by blood--those with common, Red blood serve the Silver-blooded elite, who are gifted with superhuman abilities. Mare is a Red, scraping by as a thief in a poor, rural village, until a twist of fate throws her in front of the Silver court. Before the king, princes, and all the nobles, she discovers she has an ability of her own.</div>
+                        <button id="summary-btn6" onclick="toggleSummary('summary-btn6')">Read More</button>
 
                     </div>
                 </div>
@@ -176,7 +198,8 @@
                         <div class="book-series">Series: The Heroes of Olympus</div>
                         <div class="book-summary">What he did to end up here, Jason has no idea--except that everything seems very wrong. Piper has a secret. Her father has been missing for three days, and her vivid nightmares reveal that he's in terrible danger.
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Rick Riordan, the best-selling author of the Percy Jackson series, pumps up the action and suspense in The Lost Hero, the first book in The Heroes of Olympus series. "Riordan extends the franchise in a logical direction while maximizing the elements that made the first series so popular: irreverent heroes, plenty of tension-filled moments fighting monsters, and authentic classical mythology mixed in with modern life."--Horn Book A New York Times best-seller A spin-off of the blockbuster Percy Jackson and the Olympians series, but stands on its own Combines Roman and Greek mythology.</div>
+                        <button id="summary-btn7" onclick="toggleSummary('summary-btn7')">Read More</button>
 
                     </div>
                 </div>
@@ -189,7 +212,8 @@
                         <div class="book-series"></div>
                         <div class="book-summary">Rich Dad Poor Dad, the #1 Personal Finance book of all time, tells the story of Robert Kiyosaki and his two dads--his real father and the father of his best friend, his rich dad--and the ways in which both men shaped his thoughts about money and investing. The book explodes the myth that you need to earn a high income
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Rich Dad Poor Dad, the #1 Personal Finance book of all time, tells the story of Robert Kiyosaki and his two dads--his real father and the father of his best friend, his rich dad--and the ways in which both men shaped his thoughts about money and investing. The book explodes the myth that you need to earn a high income to be rich and explains the difference between working for money and having your money work for you.1-The rich have money work for them. 2-Rich people acquire assets. The poor and middle class acquire liabilities that they think are assets. 3-he single most powerful asset we all have is our minds.</div>
+                        <button id="summary-btn8" onclick="toggleSummary('summary-btn8')">Read More</button>
 
                     </div>
                 </div>
@@ -202,7 +226,8 @@
                         <div class="book-series">Series: Oxford Bookworms</div>
                         <div class="book-summary">A Tale of Two Cities (1859) is a novel by Charles Dickens, set in London and Paris before and during the French Revolution. The novel depicts the plight of the French peasantry demoralized by the French aristocracy in the years leading up to the revolution.
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">A Tale of Two Cities (1859) is a novel by Charles Dickens, set in London and Paris before and during the French Revolution. The novel depicts the plight of the French peasantry demoralized by the French aristocracy in the years leading up to the revolution, the corresponding brutality demonstrated by the revolutionaries toward the former aristocrats in the early years of the revolution, and many unflattering social parallels with life in London during the same period. It follows the lives of several characters through these events.All but three of Dickens's previous novels had appeared only as monthly installments.</div>
+                        <button id="summary-btn9" onclick="toggleSummary('summary-btn9')">Read More</button>
 
                     </div>
                 </div>
@@ -215,7 +240,8 @@
                         <div class="book-series"></div>
                         <div class="book-summary">Nominated as one of America's best-loved novels by PBS's The Great American Read Edith Grossman's definitive English translation of the Spanish masterpiece, in an expanded P.S. edition Widely regarded as one of the funniest and most tragic books ever written, Don Quixote chronicles the adventures of the self-created knight-errant.
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Nominated as one of America's best-loved novels by PBS's The Great American Read Edith Grossman's definitive English translation of the Spanish masterpiece, in an expanded P.S. edition Widely regarded as one of the funniest and most tragic books ever written, Don Quixote chronicles the adventures of the self-created knight-errant Don Quixote of La Mancha and his faithful squire, Sancho Panza, as they travel through sixteenth-century Spain. You haven't experienced Don Quixote in English until you've read this masterful translation. This P.S. edition features an extra 16 pages of insights into the book, including author interviews, recommended reading, and more.</div>
+                        <button id="summary-btn10" onclick="toggleSummary('summary-btn10')">Read More</button>
 
                     </div>
                 </div>
@@ -228,7 +254,8 @@
                         <div class="book-series"></div>
                         <div class="book-summary">Agatha Christie's most famous and acclaimed novel! Ten strangers are brought together on an isolated island where, one by one, they die in a murderous countdown...
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">Eight people, all strangers to each other, are invited to Indian Island, off the English coast. Vera Claythorne, a former governess, thinks she has been hired as a secretary; Philip Lombard, an adventurer, and William Blore, an ex-detective, think they have been hired to look out for trouble over the weekend; Dr. Armstrong thinks he has been hired to look after the wife of the island’s owner. Emily Brent, General Macarthur, Tony Marston, and Judge Wargrave think they are going to visit old friends.When they arrive on the island, the guests are greeted by Mr. and Mrs. Rogers, the butler and housekeeper.</div>
+                        <button id="summary-btn11" onclick="toggleSummary('summary-btn11')">Read More</button>
 
                     </div>
                 </div>
@@ -241,7 +268,8 @@
                         <div class="book-series">Series: Tolkien Illustrated</div>
                         <div class="book-summary">The stirring adventure that begins The Lord of the Rings, the greatest fantasy epic of all time When Thorin Oakenshield and his band of dwarves embark upon a dangerous quest to reclaim the hoard of gold stolen from them by the evil dragon Smaug.
                         </div>
-                        <button type="button" id="fav-btn">Read More</button>
+                        <div class="fullbook-summary hidden">The stirring adventure that begins The Lord of the Rings, the greatest fantasy epic of all time When Thorin Oakenshield and his band of dwarves embark upon a dangerous quest to reclaim the hoard of gold stolen from them by the evil dragon Smaug, Gandalf the wizard suggests an unlikely accomplice: Bilbo Baggins, an unassuming Hobbit dwelling in peaceful Hobbiton. Along the way, the company faces trolls, goblins, giant spiders, and worse. But as they journey from the wonders of Rivendell to the terrors of Mirkwood.</div>
+                        <button id="summary-btn12" onclick="toggleSummary('summary-btn12')">Read More</button>
 
                     </div>
                 </div>
