--- a/cat.html
+++ b/cat.html
@@ -80,9 +80,13 @@
                 <h1 style="color: #001625;">Filter by</h1>
                 <h1 style="color: #14A1E8;">Book-Category</h1>
             </div>
-            <div class="content-5">
-                <div class="med4" onclick="fetchData('categories=Science%20Fiction%20%26%20Fantasy',this)">Science Fiction & Fantasy</div>
+            <div class="content-4">
+                <div class="med4" onclick="fetchData('categories=Animals%2C%20Bugs%20%26%20Pets',this)">Animals, Bugs & Pets</div>
+                <div class="med4" onclick="fetchData('categories=Art%2C%20Creativity%20%26%20Music',this)">Art, Creativity & Music</div>
+                <div class="med4" onclick="fetchData('categories=General%20Literature',this)">General Literature</div>
                 <div class="med4" onclick="fetchData('categories=Real%20Life', this)">Real Life</div>
+                <div class="med4" onclick="fetchData('categories=Hobbies%2C%20Sports%20%26%20Outdoors',this)">Hobbies, Sports & Outdoors</div>
+                <div class="med4" onclick="fetchData('categories=Science%20Fiction%20%26%20Fantasy',this)">Science Fiction & Fantasy</div>
                 <div class="med4" onclick="fetchData('categories=Mystery%20%26%20Suspense', this)">Mystery & Suspense</div>
             </div>
             <div class="work"></div>
