--- a/search.html
+++ b/search.html
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div class="heading">Your Searched Result..</div>
+        <div class="heading"></div>
 
         <div class="searched-books">
 
